回溯算法解决排列/组合/子集问题